refactor: 주문상품목록 일급 컬렉션 구현